--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,22 @@
     padding: 30px;
 }
 
+.student {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.details {
+    padding-right: 40px;
+}
+
+.description {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 .map-area {
     display: flex;
     height: 100%;
